--- a/css/intersection-crashes.css
+++ b/css/intersection-crashes.css
@@ -1,9 +1,19 @@
 #map {
 	width: 100%;
-	height: 550px;
+	height: 100%;
 }
 
 .leaflet-toolbar-0 {
-	width: 90px;
-	height: 30px;
+	width: 100px;
+/*	height: 30px; */
+}
+
+.leaflet-toolbar-0>li>.leaflet-toolbar-icon {
+	width: 100px;
+}
+
+.cNav {
+	width: 100px;
+	padding-left: 5px;
+	background-color: #fff;
 }
